# bishop_plugins

./: .gitignore  LICENSE  README.md  pyproject.toml
Emoji/: README.md  __init__.py  config.py  plugin.py  test.py
IMDB/: README.md  __init__.py  config.py  plugin.py  test.py
LastFM/: README.md  __init__.py  config.py  plugin.py  requirements.txt  test.py
SpiffyTitles/: README.md  __init__.py  config.py  gazapi.py  gazelle.conf.example  plugin.py  requirements.txt  test.py
scripts/: test-plugin  test-spiffytitles-live
